# fluid-protocol

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yml
contracts/borrow-operations-contract/src/: main.sw
contracts/borrow-operations-contract/tests/: pausing.rs
contracts/fpt-staking-contract/src/: main.sw
contracts/fpt-staking-contract/tests/: failure.rs  success.rs
contracts/fpt-token-contract/src/: main.sw
contracts/multi-trove-getter-contract/tests/: harness.rs
contracts/oracle-contract/src/: main.sw
contracts/oracle-contract/tests/: authorization.rs  harness.rs
contracts/protocol-manager-contract/src/: main.sw
contracts/protocol-manager-contract/tests/: success_redemptions.rs  success_redemptions_many.rs
contracts/proxy-contract/: Cargo.toml
contracts/stability-pool-contract/src/: main.sw
contracts/stability-pool-contract/tests/functions/: success.rs
contracts/trove-manager-contract/src/: main.sw
deploy-scripts/src/: add_asset.rs  deploy.rs  initialize_hint_helper.rs  lib.rs  main.rs  migrate_to_v2.rs  test_hint_helper.rs  transfer_proxy_ownership.rs  utils.rs
libraries/src/: borrow_operations_interface.sw  fluid_math.sw  fpt_token_interface.sw
services/: Cargo.toml
services/src/: lib.rs  liquidator.rs  main.rs
test-utils/src/: data_structures.rs  setup.rs  testing_query_manual.rs
test-utils/src/interfaces/: borrow_operations.rs  fpt_staking.rs  fpt_token.rs  multi_trove_getter.rs  oracle.rs  protocol_manager.rs  pyth_oracle.rs  redstone_oracle.rs  stability_pool.rs  trove_manager.rs
